<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ai2app.teampoker.phone.UserChoiceActivity"
    tools:showIn="@layout/activity_user_choice"
    android:orientation="vertical">
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/ad_unit_id_user_choice_top"/>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/user_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/createBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/create"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_weight="1"
            android:layout_margin="16dp"/>
        <Button
            android:id="@+id/joinBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/join"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_weight="1"
            android:layout_margin="16dp"/>
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/ad_unit_id_user_choice_bottom"/>
</LinearLayout>