<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ai2app.teampoker.help.AboutFragment"
    android:layout_margin="16dp">
    <ImageView
        android:id="@+id/about_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_copyright_black_24dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"/>
    <TextView
        android:id="@+id/about_app_design"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app_design"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/about_icon_made"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_icon_made"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:gravity="center"/>
    <Button
        android:id="@+id/about_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:textColor="@color/colorAccent"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"/>
</LinearLayout>
