<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ai2app.teampoker.help.HelpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp">
        <ImageView
            android:id="@+id/help_close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_cancel_white_24px" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:gravity="center_vertical|start"
            android:text="@string/i_know"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/White" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="96dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:layout_weight="1"
            android:text="@string/new_game_description"
            android:gravity="end"
            android:layout_gravity="top|end"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_arrow_upward_white_24px"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="48dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:layout_weight="1"
            android:text="@string/score_view_description"
            android:gravity="end"
            android:layout_gravity="bottom|end"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <ImageView
            android:layout_width="32dp"
            android:layout_height="72dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_arrow_upward_white_24px"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="84dp"
        android:layout_marginStart="32dp">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="64dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_arrow_upward_white_24px" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="start"
            android:text="@string/pincode_description"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/White" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:text="@string/table_description"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:drawableBottom="@drawable/ic_arrow_downward_white_24px"
        android:drawableTop="@drawable/ic_arrow_upward_white_24px"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:text="@string/hand_description"
        android:layout_marginBottom="96dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:drawableBottom="@drawable/ic_arrow_downward_white_24px"
        android:drawableTop="@drawable/ic_arrow_upward_white_24px"/>



</RelativeLayout>
