<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ai2app.teampoker.help.HelpFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:gravity="center_vertical|end"
            android:text="@string/i_know"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/White"
            android:layout_marginEnd="16dp"/>
        <ImageView
            android:id="@+id/help_close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_cancel_white_24px" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choice_user_description"
        android:layout_weight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/White"
        android:layout_marginTop="108dp"/>
    <ImageView
        android:layout_width="128dp"
        android:layout_height="384dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="-16dp"/>
    <ImageView
        android:layout_width="128dp"
        android:layout_height="384dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="-16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="128dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:layout_weight="1"
            android:text="@string/create_description"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:drawableBottom="@drawable/ic_arrow_downward_white_24px"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:layout_weight="1"
            android:text="@string/join_description"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:drawableBottom="@drawable/ic_arrow_downward_white_24px"/>
    </LinearLayout>

</RelativeLayout>
