<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/pin_code"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_margin="4dp">
        <EditText
            android:id="@+id/dialog_edit1"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:layout_margin="4dp"/>

        <EditText
            android:id="@+id/dialog_edit2"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:layout_margin="4dp"/>
        <EditText
            android:id="@+id/dialog_edit3"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:layout_margin="4dp"/>
        <EditText
            android:id="@+id/dialog_edit4"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:layout_margin="4dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/join_dialog_message"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_margin="16dp"/>
        <Button
            android:id="@+id/dialog_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/join"
            android:layout_weight="1"
            android:layout_margin="16dp"/>
    </LinearLayout>
</LinearLayout>